# fastapi-crud

./: .env  README.md  main.py  pyproject.toml  requirements.txt
libs/: db.py
migrations/: env.py
migrations/versions/: 2739017b6e2d_create_table_tasks.py
models/: task.py
router/: task.py
